--- a/Homeworks/1/sheet01.ipynb
+++ b/Homeworks/1/sheet01.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ac3a6fc3",
    "metadata": {
     "deletable": false,
@@ -914,7 +914,9 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "* sequential: By usually keeping a single hue, the lightness and mostly saturation is changed and is used to represent information that has ordering\n",
+    "* diverging: Changing lightness and possibly saturation of two colors that meet in the middle at an unsaturated color and is used when there is a critival middle value or the data devaites around zero\n",
+    "* qualitative: Is used to represent information that does ot have relationship or ordering and is for miscellanous colors"
    ]
   },
   {
@@ -970,6 +972,112 @@
     "              \"Demo\"))\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
+    "\n",
+    "gray = np.arange(0,256)\n",
+    "a = np.tile(np.arange(256),(256,1))\n",
+    "\n",
+    "plt.figure(figsize=(12,12))\n",
+    "for i, (color, label) in enumerate(colors):\n",
+    "    plt.subplot((len(color)//2)+1,2,i+1)\n",
+    "    plt.plot(gray, color[0](gray), 'red')\n",
+    "    plt.plot(gray, color[1](gray), 'green')\n",
+    "    plt.plot(gray, color[2](gray), 'blue')\n",
+    "    plt.imshow(np.stack([color[0](a),color[1](a),color[2](a)],axis=2)/256, origin='lower')\n",
+    "    plt.title(label)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44022049",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "\n",
+    "colors = []\n",
+    "\n",
+    "# YOUR CODE HERE\n",
+    "colors.append((np.asarray\n",
+    "                          ((lambda x: np.clip(3*x, 0, 180), \n",
+    "                           lambda x: np.clip(0.5*x, 60, 240),\n",
+    "                           lambda x: np.clip(20*x, 20, 100))),\n",
+    "              \"Sequential\"))\n",
+    "\n",
+    "gray = np.arange(0,256)\n",
+    "a = np.tile(np.arange(256),(256,1))\n",
+    "\n",
+    "plt.figure(figsize=(12,12))\n",
+    "for i, (color, label) in enumerate(colors):\n",
+    "    plt.subplot((len(color)//2)+1,2,i+1)\n",
+    "    plt.plot(gray, color[0](gray), 'red')\n",
+    "    plt.plot(gray, color[1](gray), 'green')\n",
+    "    plt.plot(gray, color[2](gray), 'blue')\n",
+    "    plt.imshow(np.stack([color[0](a),color[1](a),color[2](a)],axis=2)/256, origin='lower')\n",
+    "    plt.title(label)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed359460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "\n",
+    "colors = []\n",
+    "\n",
+    "# YOUR CODE HERE\n",
+    "colors.append((np.asarray((\n",
+    "                    lambda x: (5*x) % 256,  \n",
+    "                    lambda x: (2*x) % 256,  \n",
+    "                    lambda x: (6*x) % 256)),\n",
+    "                    \"Qualitative\"))\n",
+    "\n",
+    "gray = np.arange(0,256)\n",
+    "a = np.tile(np.arange(256),(256,1))\n",
+    "\n",
+    "plt.figure(figsize=(12,12))\n",
+    "for i, (color, label) in enumerate(colors):\n",
+    "    plt.subplot((len(color)//2)+1,2,i+1)\n",
+    "    plt.plot(gray, color[0](gray), 'red')\n",
+    "    plt.plot(gray, color[1](gray), 'green')\n",
+    "    plt.plot(gray, color[2](gray), 'blue')\n",
+    "    plt.imshow(np.stack([color[0](a),color[1](a),color[2](a)],axis=2)/256, origin='lower')\n",
+    "    plt.title(label)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac5ad738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "\n",
+    "colors = []\n",
+    "\n",
+    "# YOUR CODE HERE\n",
+    "colors.append((np.asarray((\n",
+    "        lambda x: np.sin(x/256*2*np.pi)*128+128,   # Blue to White\n",
+    "        lambda x: 255 - np.abs(x-170),          # White to Red\n",
+    "        lambda x: np.sin(x/256*2*np.pi)*128+128 # Blue to White\n",
+    "    )), \n",
+    "\"Diverging\"))\n",
     "\n",
     "gray = np.arange(0,256)\n",
     "a = np.tile(np.arange(256),(256,1))\n",
@@ -1044,7 +1152,75 @@
     "m = np.mat([[-.14861, 1.78277],\n",
     "            [-.29227, -.90649],\n",
     "            [1.97294, 0]])\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from imageio.v2 import imread\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "start_color = 0.5\n",
+    "rotations = -1.5\n",
+    "hue = 1\n",
+    "gamma = 1\n",
+    "m = np.matrix([[-.14861, 1.78277],\n",
+    "            [-.29227, -.90649],\n",
+    "            [1.97294, 0]])\n",
+    "\n",
+    "def generate_cube_helix_lookup_table():\n",
+    "    \"\"\"Generate a lookup table for cube helix color mapping.\n",
+    "    \n",
+    "    Return: \n",
+    "        lookup_table (ndarray): The cube helix color map. (256,3)\n",
+    "    \"\"\"\n",
+    "    lookup_table = np.empty((256,3), float)\n",
+    "    \n",
+    "    for i in np.arange(256):\n",
+    "        # YOUR CODE HERE\n",
+    "        lam = i**gamma\n",
+    "        a = (hue * lam * (1-lam))/2\n",
+    "        phi = 2*np.pi*(start_color/3 + rotations * lam)\n",
+    "\n",
+    "        dot = np.dot(m, np.array([np.cos(phi),  np.sin(phi)]))\n",
+    "        RGB = lam + a * dot\n",
+    "        lookup_table[i] = np.clip(RGB, 0, 1)\n",
+    "\n",
+    "    return lookup_table\n",
+    "\n",
+    "\n",
+    "def apply_colormap(img, loookup_table):\n",
+    "    \"\"\"Apply a colormap to an image\n",
+    "    \n",
+    "    Args:\n",
+    "        img (ndarray): The image (ndim=2).\n",
+    "        lookup_table (ndarray): The lookup table (shape=(256,3)).\n",
+    "        \n",
+    "    Return:\n",
+    "        color_img (ndarray): The color image resulting from application of the colormap.\n",
+    "    \"\"\"\n",
+    "    color_img = loookup_table[img]\n",
+    "    color_img[color_img>1] = 1.\n",
+    "    color_img[color_img<0] = 0.\n",
+    "    return color_img\n",
+    "\n",
+    "img = imread('images/lung.png', pilmode='L')\n",
+    "lookup_table = generate_cube_helix_lookup_table()\n",
+    "img2 = apply_colormap(img, lookup_table)\n",
+    "\n",
+    "gray = np.arange(0,256)\n",
+    "a = np.tile(np.arange(256),(256,1))\n",
+    "\n",
+    "int_table = (lookup_table*256).astype(int)\n",
+    "plt.figure(figsize=(8,8))\n",
+    "plt.plot(gray, int_table[gray,0], 'red')\n",
+    "plt.plot(gray, int_table[gray,1], 'green')\n",
+    "plt.plot(gray, int_table[gray,2], 'blue')\n",
+    "plt.imshow(np.stack([int_table[a,0],int_table[a,1],int_table[a,2]],axis=2)/256, origin='lower')\n",
+    "plt.title(\"Cube Helix\")\n",
+    "plt.show()\n",
+    "\n",
+    "plt.figure(figsize=(20,10))\n",
+    "plt.subplot(1,2,1); plt.imshow(img, cmap = 'gray'); plt.axis('off')\n",
+    "plt.subplot(1,2,2); plt.imshow(img2); plt.axis('off')\n",
+    "plt.show()\n",
     "def generate_cube_helix_lookup_table():\n",
     "    \"\"\"Generate a lookup table for cube helix color mapping.\n",
     "    \n",
@@ -1221,7 +1397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
