--- a/Homeworks/1/sheet01.ipynb
+++ b/Homeworks/1/sheet01.ipynb
@@ -560,7 +560,36 @@
     "solution": "shown"
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Contrast is:\n",
+    "- in a nutshell: contrast is the difference between saturations\n",
+    "\n",
+    "Ways to measure contrast:\n",
+    "Globally:\n",
+    "Cglobal(g) = 1/R (maxg(x,y) - ming(x,y))\n",
+    "\n",
+    "Locally:\n",
+    "Clocal(g) = 1/NxM sum(overall pixels) abs(intesity(current pixel) - mean intensity of neighbourhood)\n",
+    "\n",
+    "Low contrast can be caused by: \n",
+    "- light \n",
+    "\n",
+    "It is a problem when:\n",
+    "- perceptibility for humans is limited\n",
+    "- details vanish (information)\n",
+    "- multiple layers in the image (back-, middle-, foreground)\n",
+    "\n",
+    "It is not when: \n",
+    "- details dont matter\n",
+    "- background \n",
+    "- uniform coloured images \n",
+    "\n",
+    "\n",
+    "Ways to improve contrast:\n",
+    "Globally:\n",
+    "- Maximizing the global contrast by applying a (linear) transfer function \n",
+    "Locally:\n",
+    "- improving local contrast by applying a nonlinear monotonic transfer function (has to be nonlinear bc otherwise we would just rescale it without changing the actual contrast), like the gamma correction ()\n",
+    "- histogram equalisation (see below) "
    ]
   },
   {
@@ -603,7 +632,25 @@
     "solution": "shown"
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The way it works:\n",
+    "idea: \n",
+    "- the optimal image has the maximum information content\n",
+    "- maximise the entropy E of the histogram\n",
+    "- E is maximised if P(g) = const for all g = 0...255 (always same value, uniform distribution, like mixed Latte Macchiato)\n",
+    "\n",
+    "\n",
+    "Entropy:\n",
+    "- average information content\n",
+    "- maximal unequally: low\n",
+    "- maximal equally: high\n",
+    "- can be calculated by taking the probabilties of the grey values\n",
+    "\n",
+    "\n",
+    "Entropy's relation to histogram equalization:\n",
+    "- we try to find a transfer function for the histogram of an image that maximises the entropy \n",
+    "- this maximised entropy is shown as a uniform distributed histogram\n",
+    "\n",
+    "-> All focussed on the conceptually simpler continuous case"
    ]
   },
   {
@@ -646,7 +693,16 @@
     "solution": "shown"
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Occuring problems when considering discrete images: \n",
+    "- histogram values are transformed to real values (reelle Zahlen(mit Dezimalzahlen))\n",
+    "- digitale Bilder sind grundsätzlich diskret \n",
+    "- not all continiously available gray values can be mapped onto discrete images and therefore have to be rounded up\n",
+    "- by rounding up it could be that we end up outside the range, therefore we substract 1 from the result\n",
+    "\n",
+    "main problem is the rounding up though, because:\n",
+    "- goal would be to have a uniform distribution but since we are in a discrete range and have to round up, we cannot reach this \n",
+    "- eg the grey values 4,5,6,7 are now all of value 7\n",
+    "\n"
    ]
   },
   {
