Theoretical question Task 3 (hatte ich vergessen)

--- a/Homeworks/2/sheet02.ipynb
+++ b/Homeworks/2/sheet02.ipynb
@@ -997,8 +997,23 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "ANSWER\n",
+    "\n",
+    "Unsharp Masking: \n",
+    "* sharpening edges\n",
+    "* redusing smoothing\n",
+    "* -> by empahsizing the difference between original and unsharp image\n",
+    "\n",
+    "Difference Normalization and Clipping\n",
+    "* Norm: porportially arragned between 0 and 1\n",
+    "* Clipping: Values are restricted to specific range, cutting off any values that fall outside this range"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3c2e634",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
