--- a/Homeworks/2/sheet02.ipynb
+++ b/Homeworks/2/sheet02.ipynb
@@ -603,6 +603,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c006b66e",
+   "metadata": {},
+   "source": [
+    "Convolution helps computer vision systems detect patterns and features within an image. It works by using a filter kernel that moves across the image row by row and therefore examines only a small region of the image at a time. The size of the Kernel is defined as:\n",
+    "$k(i, j) \\in \\mathbb{R}^{(2m+1) \\times (2n+1)}$, where $m, n \\in \\mathbb{N}$\n",
+    "\n",
+    "\n",
+    "We can see here that the kernel is a grid of numbers with the size of (2m+1)x(2n+1). This ensures that the number is odd to have a clear \"center\" pixel that gets examined.\n",
+    "Within this kernel, each number in the kernel is multiplied with the \"center\" pixel. These values get added and the result is saved in a new image g.\n",
+    "\n",
+    "$g'(x, y) = (g * k)(x, y) = \\sum_{i \\in [-m, m]} \\sum_{j \\in [-n, n]} k(i + m, j + n) \\cdot g(x + i, y + j)$\n",
+    "\n",
+    "1. $g'(x, y)$ is the result of the convolution at the point $(x, y)$ in the output image.\n",
+    "2. $(g * k)(x, y)$ displays the convolution operation of $g$ with the kernel at the respective pixel $(x, y)$.\n",
+    "3. Then we sum up the rows and columns in the range of our kernel.\n",
+    "4. $k(i + m, j + n)$ gives the kernel value at the corresponding position while making sure to use the correct indices.\n",
+    "5. $g(x + i, y + j)$ gives the pixel from the input image that aligns with the kernel value.\n",
+    "\n",
+    "\n",
+    "Lastly, we multiply these, sum all the products and then we get the convolution result at $g(x ,y)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b9e95ab5",
    "metadata": {
     "deletable": false,
@@ -676,7 +700,67 @@
     "solution": true
    },
    "source": [
-    "$\\displaystyle \\mathrm{translate}(g*k,\\Delta x, \\Delta y)[x,y]= \\frac{(g(x,y)*k[x,y]-g(x-\\Delta x, y-\\Delta y)*k[x, y])}{\\Delta x + \\Delta y}=\\left(\\frac{g(x,y)-g(x-\\Delta x, y-\\Delta y)}{\\Delta x + \\Delta y}\\right)*k[x,y]=(\\mathrm{translate}(g,\\Delta x, \\Delta y)*k)[x,y]$"
+    "For convolution to be linear, it has to pass the two condition checks from the lecture:\n",
+    "\n",
+    "Condition 1. $f \\left( a \\cdot x \\right) = a \\cdot f \\left (x \\right)$\n",
+    "\n",
+    "Suppose $g'(x, y) = a \\cdot g(x, y)$, where $a$ is a scalar. The convolution becomes:\n",
+    "$(g' \\ast k)(x, y) = \\sum_{i, j} k(i, j) \\cdot g'(x + i, y + j)$.\n",
+    "\n",
+    "Substituting $g'(x + i, y + j) = a \\cdot g(x + i, y + j)$:\n",
+    "$(g' \\ast k)(x, y) = \\sum_{i, j} k(i, j) \\cdot (a \\cdot g(x + i, y + j))$.\n",
+    "\n",
+    "Factor $a$ out of the summation:\n",
+    "$(g' \\ast k)(x, y) = a \\cdot \\sum_{i, j} k(i, j) \\cdot g(x + i, y + j)$.\n",
+    "\n",
+    "Thus:\n",
+    "$(g' \\ast k)(x, y) = a \\cdot (g \\ast k)(x, y)$.\n",
+    "\n",
+    "Condition 2: $f(x_1 + x_2) = f(x_1) + f(x_2)$\n",
+    "\n",
+    "Suppose $g(x, y) = g_1(x, y) + g_2(x, y)$. The convolution becomes:\n",
+    "$(g \\ast k)(x, y) = \\sum_{i, j} k(i, j) \\cdot g(x + i, y + j)$.\n",
+    "\n",
+    "Substitute $g(x + i, y + j) = g_1(x + i, y + j) + g_2(x + i, y + j)$:\n",
+    "$(g \\ast k)(x, y) = \\sum_{i, j} k(i, j) \\cdot \\left(g_1(x + i, y + j) + g_2(x + i, y + j)\\right)$.\n",
+    "\n",
+    "Using the distributive property:\n",
+    "$(g \\ast k)(x, y) = \\sum_{i, j} k(i, j) \\cdot g_1(x + i, y + j) + \\sum_{i, j} k(i, j) \\cdot g_2(x + i, y + j)$.\n",
+    "\n",
+    "Thus:\n",
+    "$(g \\ast k)(x, y) = (g_1 \\ast k)(x, y) + (g_2 \\ast k)(x, y)$.\n",
+    "\n",
+    "Therefore convolution is linear.\n",
+    "\n",
+    "Now we check if convolution is homogeneous:\n",
+    "\n",
+    "Proof of Homogeneity:\n",
+    "Left-hand side: Translating the filtered result\n",
+    "markdown\n",
+    "Code kopieren\n",
+    "The translation of $(g \\ast k)(x, y)$ by $(\\Delta x, \\Delta y)$ is:\n",
+    "$\\operatorname{translate}(g \\ast k, \\Delta x, \\Delta y)[x, y] = (g \\ast k)(x - \\Delta x, y - \\Delta y)$.\n",
+    "\n",
+    "Substitute the definition of convolution:\n",
+    "$(g \\ast k)(x - \\Delta x, y - \\Delta y) = \\sum_{i, j} k(i, j) \\cdot g((x - \\Delta x) + i, (y - \\Delta y) + j)$.\n",
+    "Right-hand side: Filtering the translated input\n",
+    "markdown\n",
+    "Code kopieren\n",
+    "The translation of $g(x, y)$ is:\n",
+    "$\\operatorname{translate}(g, \\Delta x, \\Delta y)[x, y] = g(x - \\Delta x, y - \\Delta y)$.\n",
+    "\n",
+    "The convolution of the translated $g$ with $k$:\n",
+    "$(\\operatorname{translate}(g, \\Delta x, \\Delta y) \\ast k)[x, y] = \\sum_{i, j} k(i, j) \\cdot g((x - \\Delta x) + i, (y - \\Delta y) + j)$.\n",
+    "Comparison:\n",
+    "markdown\n",
+    "Code kopieren\n",
+    "Both sides simplify to:\n",
+    "$\\sum_{i, j} k(i, j) \\cdot g(x + i - \\Delta x, y + j - \\Delta y)$.\n",
+    "\n",
+    "Thus:\n",
+    "$\\operatorname{translate}(g \\ast k, \\Delta x, \\Delta y)[x, y] = (\\operatorname{translate}(g, \\Delta x, \\Delta y) \\ast k)[x, y]$.\n",
+    "\n",
+    "Conclusion: Convolution is homogeneous."
    ]
   },
   {
