--- a/Homeworks/3/sheet03.ipynb
+++ b/Homeworks/3/sheet03.ipynb
@@ -853,7 +853,7 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Morphological operators use a small pattern called a structuring element S. It searches the image for (a) specific pattern(s) by moving the element S across the image in small sections. It can help to smooth certain regions and remove noise from the image. It can also fill tiny holes in the image or sharpen edges of certain shapes to better define outlines."
    ]
   },
   {
@@ -896,7 +896,14 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Erosion uses a structuring element F which follows the lines inside a figure and \"shrinks\" the shape into a smaller shape by \"cutting\" the outer lines. This is helpful so remove noise or tiny objects from the image.\n",
+    "\n",
+    "Dilation works somehow similarly but also in the opposite way. It uses a structuring element F again and follows the lines of the figure too, but on the outside instead of the inside. The element F creates new, bigger outlines around the figure. This can be used to fill in gaps between shapes or fill holes.\n",
+    "\n",
+    "Erosion and dilation use a matrix that moves across the image in small sections just like 2D convolution does. Moreover, all these operators are used to detect and transform or modify certain patterns. This is done for each pixel and the neighbooring pixels are used to perform the operation.\n",
+    "\n",
+    "A difference between erosion/dilation and convolution is the purpose. While erosion and dilation are searching the image for specific shapes in the image and works to shrink or grow them, convolution searches for specific features or textures to smooth or edge things like brightness patterns.\n",
+    "Additionally, Erosion/Dilation works with binary values and for one pixel it checks whether the neighboring pixels and compares them. On the other hand, convolution works with numbers and does not only compare the neighboring pixels but multiplies them and adds them up with regards to the kernel values."
    ]
   },
   {
@@ -938,7 +945,37 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Input Image g:\n",
+    "\n",
+    "$g = \\begin{bmatrix}\n",
+    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 1 & 1 & 1 & 0 \\\\\n",
+    "0 & 1 & 1 & 1 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "This is our binary image where the 1's represent a white square in our image.\n",
+    "\n",
+    "Structuring element S:\n",
+    "\n",
+    "$S = \\begin{bmatrix}\n",
+    "1 & 1 & 1 \\\\\n",
+    "1 & 0 & 1 \\\\\n",
+    "1 & 1 & 1 \\\\\n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "This is our elements S that gets moved across the image looking at each pixel. the anchor point of our element S is the center value (0). For erosion, this center does not matter and only the pixels around are checked. It checks if all the 1's fit entirely within the white region in g. If they do, the anchor point 0 will be marked in the output image g'.\n",
+    "\n",
+    "Resulting Output g':\n",
+    "\n",
+    "$g' = \\begin{bmatrix}\n",
+    "1 & 1 & 1 & 1 & 1 \\\\\n",
+    "1 & 0 & 0 & 0 & 1 \\\\\n",
+    "1 & 0 & 0 & 0 & 1 \\\\\n",
+    "1 & 1 & 1 & 1 & 1 \\\\\n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "In our resulting g', S marks beyond the boundaries of g which results in an extention beoynd the original object in g.\n"
    ]
   },
   {
