--- a/Homeworks/4/sheet04.ipynb
+++ b/Homeworks/4/sheet04.ipynb
@@ -122,7 +122,40 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "An exponential function $f(x) = a\\cdot b^x+c$ is a function that describes an expoential growth or decay. It is called exponential because its arguments can be seen as exponent $x$ to which a certain constant value $b$ is raised. A common example can be found in population growth, where the duplicating nature of algees:  can be described by the relation $b^x=2^x$. The duplication is indicated by the base $b=2$ and $x$ can be interpreted as time that passed. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f8ef679",
+   "metadata": {},
+   "source": [
+    " The exponential function, interchangeably denoted as $e^x$ or $\\exp{x}$, is the unique real function that has the derivative equal to itself.  $\\frac{\\mathrm{d}}{\\mathrm{d}x}\\exp{x}=\\exp{x}$. \n",
+    " In general, every exponential function can be written with $e^x$. This can be proved by using the inverse of the exponential function, the natural logarithm $\\ln$:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5729d473",
+   "metadata": {},
+   "source": [
+    "$b=\\exp(\\ln{b})$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19a6b569",
+   "metadata": {},
+   "source": [
+    "$b^x=\\exp({\\ln b})^x$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "404a59e8",
+   "metadata": {},
+   "source": [
+    "$b^x=\\exp(x\\cdot{\\ln b})$ "
    ]
   },
   {
@@ -335,47 +368,75 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib ipympl\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.ndimage import binary_hit_or_miss, distance_transform_cdt, binary_dilation\n",
     "from imageio.v3 import imread\n",
     "\n",
-    "def my_skeletonize(img):\n",
-    "    \"\"\"\n",
-    "    Compute the skeloton of a binary image using hit_or_miss operator.\n",
+    "def local_operator(frame, kernel_size, function):\n",
     "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    img : ndarray of bools\n",
-    "        Binary image to be skeletonized.\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    skeleton : ndarray of bools\n",
-    "        The skeleton of the input image.\n",
-    "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    k, n = kernel_size[0]//2, kernel_size[1]//2\n",
+    "    res_frame = np.zeros_like(frame)\n",
+    "    padded_frame = np.zeros(shape=(frame.shape[0]+2*k, frame.shape[1]+2*n, frame.shape[2]))\n",
+    "    padded_frame[k:-k, n:-n] = frame\n",
+    "\n",
+    "    for c in range(padded_frame.shape[2]):\n",
+    "        for i in range(k, padded_frame.shape[0]-k):\n",
+    "            for j in range(n, padded_frame.shape[1]-n):\n",
+    "                curr_frame = padded_frame[i-k:i+k+1,j-n:j+n+1, c]\n",
+    "                res_frame[i-k,j-n, c] = function(curr_frame)\n",
+    "    return res_frame\n",
     "\n",
     "\n",
-    "img = imread(\"images/engelstrompete.png\") > 0\n",
-    "skel = my_skeletonize(img)\n",
-    "result = distance_transform_cdt(img, metric='taxicab') + (50 * img)\n",
-    "result[binary_dilation(skel)] = 0\n",
-    "plt.figure(figsize=(10,10))\n",
-    "plt.gray()\n",
-    "plt.imshow(result)\n",
-    "plt.show()"
+    "def distance_transform(frame):\n",
+    "    frame_distances = []\n",
+    "\n",
+    "    while frame.sum()>0:\n",
+    "        frame = local_operator(frame=frame, kernel_size=(3,3), function=lambda x: x.min())\n",
+    "        frame_distances.append(frame)\n",
+    "\n",
+    "    return np.array(frame_distances).sum(axis=0)\n",
+    "\n",
+    "\n",
+    "def skeletonize(frame):\n",
+    "\n",
+    "    def skeletonize_function(frame):\n",
+    "        frame = frame*kernel\n",
+    "        if frame.sum()==4:\n",
+    "            return 1\n",
+    "        else: \n",
+    "            return 0\n",
+    "        \n",
+    "    base = np.array([1]*6 + [-1]*3).reshape(3,3)\n",
+    "    base[1,0], base[1,2] = 0, 0\n",
+    "    base2 = np.array([-1]*4+ [1]*5).reshape(3,3)\n",
+    "    base2[0,2], base2[2,0] = 0, 0 \n",
+    "\n",
+    "    kernels = [base, base.T, np.flip(base), np.flip(base.T), base2, np.flip(base2,1).T, np.flip(base2,1), np.flip(base2,1).T, np.flip(base2)]\n",
+    "    \n",
+    "    frame = np.where(frame>0, 1, 0)\n",
+    "    for _ in range(10):\n",
+    "        for kernel in kernels:\n",
+    "            frame -= local_operator(frame, kernel_size=(3,3), function=skeletonize_function)\n",
+    "    return frame\n",
+    "\n",
+    "frame = imread(\"images/engelstrompete.png\") > 0\n",
+    "frame = frame.reshape(*frame.shape[:2], 1)\n",
+    "\n",
+    "\n",
+    "imgs = [frame]\n",
+    "for func in [distance_transform, skeletonize]:\n",
+    "    frame = func(frame)\n",
+    "    imgs.append(frame)\n",
+    "\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(15,5))\n",
+    "titles = [r\"$g$\", r\"distance_transform$(g)$\", r\"skeletonize$($distance_transform$(g))$\"]\n",
+    "\n",
+    "for ax, t, x in zip(axes, titles, imgs):\n",
+    "    ax.imshow(x, cmap=\"gray\")\n",
+    "    ax.set_title(t)\n",
+    "    ax.axis(\"off\");\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b28438b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1156,7 +1217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cv",
    "language": "python",
    "name": "python3"
   },
@@ -1170,7 +1231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
