--- a/Homeworks/5/sheet05.ipynb
+++ b/Homeworks/5/sheet05.ipynb
@@ -864,7 +864,8 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "It explaints the effect of convoltion on frequencies. A concolution in pixel space is a (complex) multiplication in Fourier.\n",
+    "It allows fast computation of concolution and its properties can be derived from its fourier transform"
    ]
   },
   {
