Too many Typos corrected :o

--- a/Homeworks/5/sheet05.ipynb
+++ b/Homeworks/5/sheet05.ipynb
@@ -864,8 +864,8 @@
     "solution": true
    },
    "source": [
-    "It explaints the effect of convoltion on frequencies. A concolution in pixel space is a (complex) multiplication in Fourier.\n",
-    "It allows fast computation of concolution and its properties can be derived from its fourier transform"
+    "It explaints the effect of convolution on frequencies. A convolution in pixel space is a (complex) multiplication in Fourier.\n",
+    "It allows fast computation of convolution and its properties can be derived from its fourier transform"
    ]
   },
   {
@@ -907,7 +907,7 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Like in the chapter local operators: introduce periodic boundary conditions and assume that the signal is periodic and doesnt end at the border."
    ]
   },
   {
@@ -948,7 +948,11 @@
     "solution": "shown"
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "* FFT for image and kernel : O (N log(N))\n",
+    "* pointwise multiplication : O(N)\n",
+    "* Transform back : O (N log(N))\n",
+    "\n",
+    "-> in total O (N log(N)) + O(N) + O (N log(N)) = O (N log(N))"
    ]
   },
   {
