--- a/Homeworks/5/sheet05.ipynb
+++ b/Homeworks/5/sheet05.ipynb
@@ -625,7 +625,7 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Fourier transform describes an image in terms of frequencies by looking at the patterns in pixels. The frequency space is the result of the fourier transform which shows the frequency of a certain pattern. Low frequencies respresent smooth details, whereas high frequencies show edges or fine details. A point in that space represents how strong the current pattern is in the image. The amplitude shows how much it changes the image and the alignment(phase) how that pattern is positioned in the image."
    ]
   },
   {
@@ -687,10 +687,21 @@
     "    Returns:\n",
     "        ndarray (complex): The Fourier transformed function.\n",
     "    \"\"\"\n",
+    "\n",
+    "    # An array of complex numbers to store the Fourier coefficients\n",
     "    ft = np.zeros(func.shape, dtype=complex)\n",
     "\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    L = len(func)\n",
+    "    # Frequency indices\n",
+    "    n = np.arange(L)\n",
+    "    # Position indices as a column vector\n",
+    "    x = np.arange(L).reshape(-1, 1) \n",
+    "\n",
+    "    # Create the exponential term matrix\n",
+    "    exp_term = np.exp(-2j * np.pi * n * x / L)\n",
+    "\n",
+    "    # Compute the Fourier coefficients by summing contributions for each frequency\n",
+    "    ft = np.dot(func, exp_term)\n",
     "\n",
     "    return ft\n",
     "\n",
