--- a/Homeworks/7/sheet07.ipynb
+++ b/Homeworks/7/sheet07.ipynb
@@ -120,7 +120,9 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "* Coding Redundancy (bits for coding gray values): m < n codes are needed (n = codes that represent information)\n",
+    "* interpixel redundancy (data points per pixel)\n",
+    "* psychovisual redundancy (information required fore recognition)"
    ]
   },
   {
@@ -161,7 +163,13 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "lossless Compression:\n",
+    "* Reduces file size without losing any data\n",
+    "* original data perfectly reconstructacble from the compressed file\n",
+    "\n",
+    "Lossy Compression: \n",
+    "* Reduces file size by permanently removing some data\n",
+    "* usually data that seems less important or imperceptible to human senses"
    ]
   },
   {
@@ -203,7 +211,14 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Scenery\n",
+    "* features: complex and detailed scenery, many colors, textures and objects\n",
+    "* Lossy -> balance between file size and visual quality, small reductions in detail and color felity often imperceptible\n",
+    "\n",
+    "\n",
+    "Logos:\n",
+    "* fetures: simple and clean design, few details, sharp edges\n",
+    "* Lossless -> maintain sharpness adn clarity, no qualitiy loss"
    ]
   },
   {
@@ -270,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "998ae67a",
    "metadata": {
     "deletable": false,
@@ -399,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "df17c2e0",
    "metadata": {
     "deletable": false,
@@ -414,7 +429,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tree' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#raise NotImplementedError()\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mtree\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tree' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
