--- a/Homeworks/6/sheet06.ipynb
+++ b/Homeworks/6/sheet06.ipynb
@@ -1418,6 +1418,36 @@
     "plt.title(\"Haar Wavelet Function\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b0cfb0",
+   "metadata": {},
+   "source": [
+    "Die **Haar-Basis-Wavelet** \\(\\psi(x)\\) und die **Scaling-Wavelet** \\(\\phi(x)\\) sind elementare Funktionen in der Wavelet-Analyse, die zur Konstruktion von Signal-Darstellungen verwendet werden. Sie definieren unterschiedliche Aspekte einer Wavelet-Transformation:\n",
+    "\n",
+    "### 1. **Scaling-Wavelet (\\(\\phi(x)\\))**:\n",
+    "- **Definition**: Die Scaling-Wavelet (auch \"Skalierungsfunktion\") beschreibt eine grobe Approximation des Signals. Sie legt fest, wie das Signal auf gröbere Skalen repräsentiert wird.\n",
+    "- **Eigenschaften**:\n",
+    "  - Konstante Funktion im Intervall \\([0, 1)\\).\n",
+    "  - Ist \\(1\\) im Bereich \\([0, 1)\\) und \\(0\\) außerhalb.\n",
+    "  - Verwendet für die Approximation (niedrige Frequenzen).\n",
+    "- Im Plot ist dies die flache Funktion.\n",
+    "\n",
+    "### 2. **Basis-Wavelet (\\(\\psi(x)\\))**:\n",
+    "- **Definition**: Die Basis-Wavelet beschreibt die Details des Signals, indem sie Änderungen in verschiedenen Skalen erfasst.\n",
+    "- **Eigenschaften**:\n",
+    "  - Ist \\(1\\) im Bereich \\([0, 0.5)\\), \\(-1\\) im Bereich \\([0.5, 1)\\) und \\(0\\) außerhalb.\n",
+    "  - Hat positiven und negativen Bereich (Nullmittelwert), um lokale Unterschiede hervorzuheben.\n",
+    "  - Verwendet für die Detaillierung (hohe Frequenzen).\n",
+    "- Im Plot ist dies die Funktion mit einem positiven und einem negativen Ausschlag.\n",
+    "\n",
+    "### Zusammenfassung:\n",
+    "- \\(\\phi(x)\\) (Scaling-Wavelet) approximiert das Signal auf einer groben Skala.\n",
+    "- \\(\\psi(x)\\) (Basis-Wavelet) erfasst die feinen Details und Unterschiede im Signal.\n",
+    "\n",
+    "Diese beiden Funktionen bilden die Grundlage für die Diskrete Haar-Wavelet-Transformation, die in vielen Bereichen wie Bildkompression, Signalverarbeitung und numerischer Analyse verwendet wird."
+   ]
   }
  ],
  "metadata": {
