--- a/Homeworks/7/sheet07.ipynb
+++ b/Homeworks/7/sheet07.ipynb
@@ -725,7 +725,9 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Run length coding removes redundancy caused from identical gray / colour values of neigbouring pixels\n",
+    "disadvantage: in the worst case, the amount of data is doubled, inefficient for noisy images as runs are very short\n",
+    "advantage: in best case its halfed, minimises coding redudancies "
    ]
   },
   {
@@ -864,7 +866,7 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "In Gray code two successive numbers differ by one bit at most (their hamming distance of neighbouring codewords is one). There are as many Gray codes as there are Hamiltonian cycles on corresponding hyper cube. Its better suited than lenght enocidng because itll never double the amount of data and works on noisy images just as well as on not so noisy images (not like RLE)"
    ]
   },
   {
