--- a/Homeworks/1/AHE.ipynb
+++ b/Homeworks/1/AHE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -486,20 +486,22 @@
     }
    ],
    "source": [
-    "mat = np.array([-0.14861, 1.78277, -0.29227, -0.90649, 1.97294, 0]).reshape(3,2)\n",
+    "def get_cube_helix_colormap(start_color=0, rotations=-0.01, hue=1/255, gamma=1.):\n",
+    "    mat = np.array([-0.14861, 1.78277, -0.29227, -0.90649, 1.97294, 0]).reshape(3,2)\n",
+    "    \n",
+    "    cube_helix_colormap = []\n",
+    "    for lamb in range(256):\n",
+    "        a = ((hue*lamb**gamma * (1-lamb**gamma))/2)\n",
+    "        phi = 2*np.pi*(start_color/3+rotations*lamb)\n",
+    "        cube_helix = lamb**gamma + a*mat @ np.array([np.cos(phi), np.sin(phi)])\n",
+    "        cube_helix_colormap.append(cube_helix)\n",
+    "    return np.clip(cube_helix_colormap, 0, 255).astype(\"uint8\").reshape(256,3)\n",
+    " \n",
     "\n",
-    "def get_cube_helix_colormap(lamb, start_color=0, rotations=-0.01, hue=1/255, gamma=1.):\n",
-    "    lamb = np.array(lamb)\n",
-    "    a = ((hue*lamb**gamma * (1-lamb**gamma))/2)\n",
-    "    phi = 2*np.pi*(start_color/3+rotations*lamb)\n",
-    "    cube_helix_colormap = lamb**gamma + a*mat @ np.array([np.cos(phi), np.sin(phi)])\n",
-    "    return np.clip(cube_helix_colormap, 0, 255).astype(\"uint8\")\n",
+    "cube_helix_colormap = get_cube_helix_colormap()\n",
     "\n",
-    "mapping = [get_cube_helix_colormap(i) for i in range(256)]\n",
     "plt.figure(figsize=(16,5))\n",
-    "\n",
-    "# plt.plot(mapping)\n",
-    "plt.imshow(np.array(mapping).reshape(1, 256, 3));   "
+    "plt.imshow(cube_helix_colormap.reshape(1, 256, 3));   "
    ]
   },
   {
